--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content=" width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<meta name="description" content="Techium is a digital agency" />
         <title> Homepage - Techium </title>
-		<link rel="icon" type="image/x-icon" href="./favicon_package_v0.16/favicon.ico" />
-		<link rel="icon" type="image/png" href="./favicon_package_v0.16/favicon-32x32.png" />
+		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
+		<link rel="icon" type="image/png" href="./favicon.png" />
 	</head>
 	<body>
 
