--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -15,9 +15,8 @@
         <h1>Homepage</h1>
         <section><h2>We help you build your brand!</h2></section>
         <section>
-            <h2>Services
-                <p>We work with you</p>
-            </h2>
+            <h2>Services</h2>
+            <p>We work with you</p>
             </p>
             <h3>Design & Concept</h3>
             <h3>Digital Strategy</h3>
@@ -29,16 +28,15 @@
         <section>
             <h2>
                 Works
-                <p>Take a look in our portfolio</p>
             </h2>
+            <p>Take a look in our portfolio</p>
             <article><h3>Interior Design</h3></article>
             <article><h3>Web Development</h3></article>
             <article><h3>Personal Brand</h3></article>
         </section>
         <section>
-            <h2>About Us
-                <p>Everything about us</p>
-            </h2>
+            <h2>About Us</h2>
+            <p>Everything about us</p>
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem,
@@ -97,9 +95,8 @@
             </article>
         </section>
         <section>
-            <h2>Testimonials
-                <p>We are more than a digital company</p>
-            </h2>
+            <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
             <article>Testimonial 1</article>
             <article>Testimonial 2</article>
             <article>Testimonial 3</article>
@@ -107,8 +104,8 @@
         <section>
             <h2>
                 Contact
-                <p>We like to know new people</p>
             </h2>
+            <p>We like to know new people</p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat.
                 Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
