--- a/0x00-html_advanced/14-index.html
+++ b/0x00-html_advanced/14-index.html
@@ -10,7 +10,11 @@
 		<link rel="icon" type="image/png" href="./favicon.png" />
 	</head>
 	<body>
-    <header><nav></nav></header>
+    <header>
+        <nav>
+            <span>Techium</span>
+        </nav>
+    </header>
     <main>
         <h1>Homepage</h1>
         <section><h2>We help you build your brand!</h2></section>
