--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -10,12 +10,14 @@
 		<link rel="icon" type="image/png" href="./favicon.png" />
 	</head>
 	<body>
-    <header>
-        <span>Techium</span>
-        <nav>
-
-        </nav>
-    </header>
+    <div>
+        <header>
+            <span>Techium</span>
+            <nav>
+                    
+            </nav>
+        </header>
+    </div>
     <main>
         <h1>Homepage</h1>
         <section><h2>We help you build your brand!</h2></section>
