--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -136,7 +136,9 @@
         </div>
     </main>
     <div>
-        <footer>Footer</footer>
+        <footer>
+            Footer
+        </footer>
     </div>
 	</body>
 </html>
