i use comment to descridbe each section

--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-    <a href="#">Header</a>
+   <!-- Header -->
     <header>
         <div>
             <span>Techium</span>
             <nav></nav>
         </div>
     </header>
-    <a href="#">Main</a>
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <a href="#">Hero section</a>
+       <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
-        <a href="#">Services section</a>
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </section>
-        <a href="#">Works section</a>
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <a href="#">About Us section</a>
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </section>
-        <a href="#">Latest news section"></a>
+        <!--Latest news section -->
         <section>
             <div>
                 <header>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </section>
-        <a href="#">Contact section</a>
+        <!-- Contact section -->
         <section>
             <div>
                 <header>
