--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <br>
    <!-- Header -->
     <header>
         <div>
@@ -23,12 +24,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
+        <br>
        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
             </div>
         </section>
+        <br>
         <!-- Services section -->
         <section>
             <div>
@@ -46,6 +49,7 @@
                 </div>
             </div>
         </section>
+        <br>
         <!-- Works section -->
         <section>
             <div>
@@ -66,6 +70,7 @@
                 </div>
             </div>
         </section>
+        <br>
         <!-- About Us section -->
         <section>
             <div>
@@ -98,6 +103,7 @@
                 </div>
             </div>
         </section>
+        <br>
         <!--Latest news section -->
         <section>
             <div>
@@ -137,7 +143,8 @@
                 </div>
             </div>
         </section>
-        <a href="#">Testimonials section"></a>
+        <br>
+        <!-- Testimonials section -->
         <section>
             <div>
                 <header>
@@ -151,6 +158,7 @@
                 </div>
             </div>
         </section>
+        <br>
         <!-- Contact section -->
         <section>
             <div>
@@ -169,7 +177,8 @@
         </section>
     </main>
     <div>
-        <a href="#">Footer</a>
+        <br>
+        <!-- Footer -->
         <footer>
             <div>Footer</div>
         </footer>
