adding ommit comments

--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -74,6 +74,8 @@
         <!-- About Us section -->
         <section>
             <div>
+                <br>
+                <!-- Header -->
                 <header>
                     <h2>About Us</h2>
                 <p>Everything about us</p>
