--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -117,7 +117,7 @@
                         dicta
                         quibusdam atque maxime cum!
                     </p>
-                    <a href="#">Learn more about us</a>
+                    <a href="about.html">Learn more about us</a>
                 </div>
             </div>
         </section>
@@ -187,7 +187,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem
                         modo? At eum nihili facit; Quae contraria sunt his, malane?
                     </p>
-                    <a href="#">Get in touch</a>
+                    <a href="contact.html">Get in touch</a>
                 </div>
             </div>
         </section>
