creating unorderlist and list tag around link tag

--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -17,7 +17,7 @@
         <div>
             <div>
                 <a href="/">
-                    <span>Techium</span>    
+                    <span>Techium</span>
                 </a>
             </div>
             <nav>
@@ -197,9 +197,11 @@
     <!-- Footer -->
     <footer>
         <div>
-            <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
-            <a href="https://twitter.com/holbertonschool">Twitter</a>
-            <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+            <ul>
+                <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+                <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+                <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+            </ul>
         </div>
     </footer>
 </body>
